# pytest-tutorial

./: conftest.py  main.py  pyproject.toml  result.xml  test_addition.py  test_basic_fixture.py  test_basic_fixture2.py  test_example.py  test_list_user.py  test_login_user.py  test_sample1.py  test_sample2.py
pytest_tutorial.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
