[tool.poetry]
name = "pytest_tutorial"
version = "0.1.0"
description = ""
authors = ["Peter kim <sangwoo.kim@earlysloth.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pytest = "^6.0.1"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
